# PyTorch-YOLOv3

./: .gitignore  .travis.yml  README.md  app.py  condayolo_env.yml  datasets.py  detect.py  generate_ecp_list.py  generate_person_images.py  models.py  nohup.out  pyproject.toml  requirements.in  requirements.txt  setup.py  tasks.py  test.py  tox.ini  train.py  train.sh  utils.py  w.py  w2.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 1_bug_report.md  2_need_help.md  3_feature_request.md
.github/workflows/: main.yml
config/: coco.data  coco.names  create_custom_model.sh  custom.data  drone.data  ecp.data  kuzu.data  rgo.data  road.data  thermal.data  thermal.names  yolo-nano.cfg  yolov3-custom.cfg  yolov3-custom3.cfg  yolov3-tiny-custom.cfg  yolov3-tiny.cfg  yolov3.cfg
data/: get_coco_dataset.sh  pascal_voc.name
data/custom/: Untitled.ipynb  classes.names  train.txt  valid.txt
data/custom/labels/: train.txt
data/ecp/: ecp.names  ecp_list.ipynb  test.txt  train_labels.txt  valid.txt  valid_labels.txt
data/ecp/.ipynb_checkpoints/: ecp_list-checkpoint.ipynb  train-checkpoint.txt
layers/: layers.py
pytorchyolo/: detect.py  models.py  test.py  train.py
pytorchyolo/utils/: augmentations.py  datasets.py  loss.py  transforms.py  utils.py
results/: output.json
utils/: ECP_datasets.py  ECP_zip_datasets.py  augmentations.py  datasets.py  datasets_my.py  logger.py  loss.py  parse_config.py  transforms.py  untilteld.py  utils.py
weights/: download_tiny_weights.sh  download_weights.py  download_weights.sh
